# US-Visa-Permit-Prediction

./: .bandit  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .ruff  Dockerfile  Makefile  README.md  app.py  batch_monitoring.py  data.dvc  docker-compose.yml  monitoring.py  pyproject.toml  request.py  requirements.txt  ruff.toml  run.sh  run_pipelines.py  setup.py  template.py
.github/workflows/: ci_cd.yaml
github/workflows/: ci.yaml
my_feature_store/: README.md
my_feature_store/feature_repo/: example_repo.py  feature_store.yaml
src/components/: component.py  data_ingestion.py  feature_engineering.py  model_registry.py  model_training.py  model_tuning.py  model_validation.py
src/entity/: artifact_entity.py  config_entity.py
src/logger/: __init__.py
src/pipeline/: data_ingestion.py  data_ingestion_pipeline.py  feature_engineering.py  feature_engineering_pipeline.py  training_model.py  training_pipeline.py
src/tests/: conftest.py  data_ingestion_tests.py  feature_engineering_tests.py  test_data_ingestion.py  test_feature_engineering.py  test_model_training.py  test_model_tuning.py
src/tests/integration/: system_pipelines.py
src/utils/: main_utils.py
